# CeesarWallet

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  Dockerfile.ml  README.md  build.gradle.kts  docker-compose.yml  dump.rdb  settings.gradle.kts
.github/workflows/: ci-cd.yml  integration-tests.yml
backend/: build.gradle.kts
backend/src/main/resources/: application-oauth.properties
core/: build.gradle.kts
fraud-pipeline/: build.gradle.kts
fraud-pipeline/afd/: batch-imports.json  batch-predictions.json  detector-versions.json  detector.json  detectors.json  entity-types.json  event-labels.json  event-predictions.json  event-types.json  event-variables.json  external-models.json  labels.json  model-versions.json  models.json  outcomes.json  rule-versions.json  rules.json  variables.json
fraud-pipeline/kda-flink/: build.sbt
fraud-pipeline/kinesis/: event-contracts.json
frontend/: build.gradle.kts
frontend/mobile/: .easignore  .env  .watchmanconfig  AUTHENTICATION_FIX_COMPLETE.md  App-full.tsx  App-simple.tsx  App.tsx  DEPLOYMENT_GUIDE.md  DEPLOYMENT_ISSUES_RESOLVED.md  DEPLOYMENT_SUCCESS.md  app.json  aws-exports.js  create_assets.py  eas.json  iOS_TESTING_COMPLETE.md  iOS_TESTING_REPORT.md  manifest.json  metro.config.js  mobile-test.html  package-lock.json  package.json  sw.js  test_login.md
frontend/mobile-test/: app.json  package-lock.json  package.json
frontend/mobile/src/screens/: DashboardScreen.tsx  LoginScreen.tsx  PortfolioScreen.tsx  SettingsScreen.tsx  TradingScreen.tsx
frontend/mobile/src/store/: index.ts
frontend/shared/services/: realtime.ts
frontend/src/androidMain/: AndroidManifest.xml
frontend/web/: .env.local  amplify.yml  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/web/.next/: build-manifest.json  trace
frontend/web/.next/cache/: .tsbuildinfo
frontend/web/.next/server/: middleware-build-manifest.js  pages-manifest.json
frontend/web/cypress/: cypress.config.ts
frontend/web/playwright-report/: index.html
frontend/web/src/__tests__/: components.test.tsx
gradle/wrapper/: gradle-wrapper.properties
infra/: build.gradle.kts
infra/cdk/: package-lock.json  package.json
infra/cdk/graphql/: schema.graphql
infra/cdk/lib/: ceesar-wallet-infrastructure-stack.ts
k8s/: ceesar-wallet.yaml
ml-algorithm/: .env  build.gradle.kts  pyproject.toml  pytest.ini  requirements.txt
ml-algorithm/models/test_ppo/: config.json  training_metadata.json  training_sample.csv
ml-algorithm/scripts/: collect_training_data.py  train_models.py
ml-algorithm/src/trading/: api.py  config.py  database.py  engine_service.py  fraud_detection.py  fraud_detection_service.py  graphql_server.py  inference_service.py  logging_utils.py  model_registry.py  monitoring.py  resilience.py  schemas.py  websocket_server.py
ml-algorithm/src/trading/adapters/: alpaca_adapter.py  base.py  binance_adapter.py  oanda_adapter.py
ml-algorithm/src/trading/data/: calendars.py  market_data.py  technical_indicators.py
ml-algorithm/src/trading/policy/: ppo.py
ml-algorithm/src/trading/predictors/: base.py  lstm_attn.py  naive.py  tft.py
ml-algorithm/src/trading/tests/: run_tests.py  test_brokers.py  test_config.py  test_e2e.py  test_models.py  test_performance.py
scripts/: deploy-production.sh  run-all-tests.sh  setup-aws-secrets.sh  setup-local.sh  start-local.sh
(+153 files in other folders)
